src/test/ui/pattern/usefulness/integer-ranges/pointer-sized-int-allow.stderr
error[E0004]: non-exhaustive patterns: type `usize` is non-empty
  --> $DIR/pointer-sized-int-allow.rs:36:11
   |
LL |     match 7usize {}
   |           ^^^^^^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
